# chat-omni-digest

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
docs/: PUBLISHING.md
examples/: sample_wechat_digest.json
skills/chat-omni-digest/: SKILL.md
src/chat_omni_digest/: __init__.py  adapters.py  attachments.py  cli.py  dat_decoder.py  hardlink.py  image_keys.py  io.py  models.py  report.py  resolver.py  wechat_resource.py  xml_utils.py
tests/: test_dat_decoder.py  test_hardlink_resolver.py  test_image_keys.py  test_pipeline.py  test_xml_utils.py
