[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "chat-omni-digest"
version = "0.1.0"
description = "Local-first multimodal chat archive resolver and digest pipeline, with a WeChat adapter."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Xiaochaige" }]
keywords = ["chat", "wechat", "archive", "digest", "media", "local-first"]
dependencies = []

[project.optional-dependencies]
pdf = ["pypdf>=5.0", "reportlab>=4.0"]
office = ["python-docx>=1.1", "openpyxl>=3.1"]
media = ["pycryptodome>=3.20"]
dev = ["pytest>=8.0"]

[project.scripts]
chatdig = "chat_omni_digest.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

